# parallel-game-of-life

./: CMakeLists.txt  CUDAFunction.cu  CUDAFunctions.h  README.md  benchmark.cpp  gameOfLife.h  gameOfLifeCPU.cpp  gameOfLifeCPU.h  gameOfLifeCUDA.cpp  gameOfLifeCUDA.cu  gameOfLifeCUDA.h  gameOfLifeCUDABit.cu  gameOfLifeOpenMP.cpp  gameOfLifePthread.cpp  gameOfLifePthread_bad.cpp  gameOfLifeSerial.cpp  main.cpp  parameter.h  screen.cpp  testboard.txt  utils.cpp  utils.h
docker/: Dockerfile  build_docker.sh  common.sh  run.sh
gui/: CMakeLists.txt  display.cu  display.h  gameOfLifeCUDA.cu  gameOfLifeCUDA.h  screen.cpp
